[tool.poetry]
name = "pythonic-garage-band"
version = "0.1.0"
description = ""
authors = ["TAYLOR JOHNSON <TAYLOR.MCMINN@GMAIL.COM>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
